Modified README to reflect the auth backend

--- a/README
+++ b/README
@@ -5,20 +5,31 @@ INSTALLATION:
 
 settings.py:
 
-	INSTALLED_APPS = [
+	INSTALLED_APPS = (
 		...
 		'django_switch_user',
-	]
+	)
 
-	MIDDLEWARE_CLASSES = [
+	# Note that the order of middleware is important.
+	# Take care to place this before any user-dependent middleware
+
+	MIDDLEWARE_CLASSES = (
 		...
 		'django_swtich_user.middleware.SwitchUser',
-	]
+	)
 
-	TEMPLATE_CONTEXT_PROCESSORS = [
+	TEMPLATE_CONTEXT_PROCESSORS = (
 		...
 		'django_switch_user.context_processors.switch_user',
-	]
+	)
+
+	# By default, the auth backends contains only Django's Modelbackend.
+	# Include that one as well when you override the setting.
+
+	AUTHENTICATION_BACKENDS = (
+		'django.contrib.auth.backends.ModelBackend',
+		'django_switch_user.backends.SwitchUserBackend',
+	)
 
 your_base_template.html:
 
